--- a/Task_2 Titanic Classification.ipynb
+++ b/Task_2 Titanic Classification.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TASK 2 : TITANIC CLASSIFICATION"
+    "# Title : TITANIC CLASSIFICATION"
    ]
   },
   {
